[package]
name = "weather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.52", features = ["backtrace"] }
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "3.0.0", features = ["derive"] }
comfy-table = "5.0.0"
console = "0.15.0"
dialoguer = "0.9.0"
indicatif = "0.16.2"
ordered-float = "2.8.0"
regex = "1.5.4"
reqwest = { version = "0.11.8", features = ["blocking", "json"] }
scraper = "0.12.0"
serde = { version = "1.0.132", features = ["derive"] }
serde-error = "0.1.2"
serde_json = "1.0.74"
urlencoding = "2.1.0"
